fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,7 +204,7 @@ body {
 }
 
 /* Custom scrollbar for Firefox */
-* {
+.doscroll{
   scrollbar-width: thin;
   scrollbar-color: #A005FF transparent;
 }
